<resources>
    <string name="app_name">Wallet</string>
    <string name="home">Home</string>
    <string name="card">Tarjeta</string>
    <string name="your_qr_code">Tu QR</string>
    <string name="app_logo">Logo de la app</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="not_have_account">¿No tenés cuenta?</string>
    <string name="have_account">¿Ya tenés una cuenta?</string>
    <string name="sign_up">Registrarme</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="confirm_email">Confirmar email</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="number">Número</string>
    <string name="expiration_month">Mes</string>
    <string name="expiration_year">Año</string>
    <string name="cvc">Código de seguridad</string>
    <string name="balance">Saldo</string>
    <string name="your_cards">Tus tarjetas</string>
    <string name="card_image">Imagen de tarjeta</string>
    <string name="example_hided_card_number" translatable="false">**** **** **** 1234</string>
    <string name="complete_to_add_new_card">Completá para añadir una nueva tarjeta</string>
    <string name="add">Añadir</string>
    <string name="prefs_file" translatable="false">com.wallet.PREFERENCES_FILE_KEY</string>
    <string name="user_default_balance" translatable="false">$0</string>
    <string name="hello">"Hola"</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="button_to_close">Botón para cerrar ventana</string>
    <string name="icon_to_go_back">Ícono para volver hacia atrás</string>
    <string name="card_data">Datos de la tarjeta</string>
    <string name="button_to_flip_card">Botón para voltear tarjeta</string>
    <string name="pay_with_nfc">Pagar con NFC</string>
    <string name="owner">Titular: %s %s</string>
    <string name="cvc_mayus" translatable="false">CVC %s</string>
    <string name="show_qr_code_to_receive_money">Mostrá este código QR para que te abonen</string>
    <string name="charging_your_qr">Cargando tu QR…</string>
    <string name="qr_code">Código QR</string>
    <string name="no_cards_added">No tenés tarjetas añadidas</string>
    <string name="ic_visibility">Ícono que cambia la visibilidad del campo contraseña</string>
    <string name="welcome_greeting">Bienvenido de nuevo</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="check">Revisar</string>
    <string name="complete_all_fields">Completar todos los campos</string>
    <string name="email_format">El formato del email, ej: mario.paredes@gmail.com</string>
    <string name="credentials">Tus credenciales</string>
    <string name="create_account">Creá tu cuenta</string>
    <string name="check_if_emails_match">Ver si los email coinciden</string>
    <string name="check_if_passwords_match">Ver si las contraseñas coinciden</string>
    <string name="check_password_length">El largo de la contraseña (debe ser de al menos 6 caracteres)</string>
    <string name="try_with_other_email">Probar con otro email</string>
    <string name="problem_not_detected">No pudimos detectar la causa</string>
    <string name="add_card_in_your_name">Cargar la tarjeta a tu nombre</string>
    <string name="use_a_valid_card_number">Usar un número de tarjeta a tu nombre</string>
    <string name="not_use_an_expiration_month_before_the_current_date">No usar un mes de vencimiento anterior a la fecha actual</string>
    <string name="not_use_an_expiration_year_before_the_current_date">No usar un año de vencimiento anterior a la fecha actual</string>
    <string name="use_a_valid_cvc">Usar un código de seguridad válido</string>
    <string name="card_already_added">Tarjeta ya cargada</string>
    <string name="wallet">Billetera</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="sign_off_confirm">¿Está seguro que desea cerrar sesión?</string>
    <string name="searching_devices_to_pay">Buscando dispositivo para pagar…</string>
    <string name="nfc_off">No tenés el NFC encendido</string>
    <string name="device_without_nfc">Tu dispositivo no cuenta con NFC</string>
    <string name="january_short">ENE</string>
    <string name="february_short">FEB</string>
    <string name="march_short">MAR</string>
    <string name="april_short">ABR</string>
    <string name="may_short">MAY</string>
    <string name="june_short">JUN</string>
    <string name="july_short">JUL</string>
    <string name="august_short">AGO</string>
    <string name="september_short">SEP</string>
    <string name="october_short">OCT</string>
    <string name="november_short">NOV</string>
    <string name="december_short">DIC</string>
</resources>