<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.qr.GenerateQRFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clChargingQR"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarQR"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminateTint="@color/blue"
                style="?android:attr/progressBarStyleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvChargingQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging_your_qr"
                android:textStyle="bold"
                android:textColor="@color/blue"
                app:layout_constraintStart_toStartOf="@id/progressBarQR"
                app:layout_constraintEnd_toEndOf="@id/progressBarQR"
                app:layout_constraintTop_toBottomOf="@id/progressBarQR"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGeneratedQR"
            android:layout_width="320dp"
            android:layout_height="350dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/light_green"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivQRGenerated"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/qr_code"
                android:layout_gravity="center"
                android:src="@drawable/ic_qr_code"
                tools:background="@color/white"
                tools:tint="@color/black"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvQRTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/show_qr_code_to_receive_money"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textStyle="italic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>